# intro_to_computer_graphics

./: README.md
opengl_Earth/: Makefile
opengl_Earth/libraries/include/glad/: glad.h
opengl_Earth/rsrc/shader/: earth.frag  earth.vert  moon.frag  moon.vert
opengl_Earth/src/: CMakeLists.txt  Callbacks.cpp  Callbacks.h  Sphere.cpp  Sphere.h  glad.c  input.cpp  input.h  main.cpp  shader.cpp  shader.h  texture.cpp  texture.h  variables.cpp  variables.h  window.cpp  window.h
rasterizer/: Makefile
rasterizer/scenes/: flag_brazil.xml  flag_turkey.xml  horse_and_mug.xml
rasterizer/src/: CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Helpers.cpp  Helpers.h  Line.cpp  Line.h  Main.cpp  Matrix4.cpp  Matrix4.h  Mesh.cpp  Mesh.h  Scene.cpp  Scene.h  Triangle.cpp  Triangle.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h
raytracer/: Makefile
raytracer/scenes/: dragon_lowres.xml
raytracer/source/: Scene.h  import_export.cpp  intersection.cpp  main.cpp  math.cpp  math.h
